<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2016 Kartik Arora
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">What Time Is it?</string>
    <string name="time_format">12 hour time format</string>
    <string name="watchface_configuration">Watchface Configuration</string>
    <string name="show_am_pm">Show AM/PM</string>
    <string name="show_day_and_date">Show day and date</string>
    <string name="show_seconds">Show seconds</string>
    <string name="show_hex_color_code">Show hex color code</string>
</resources>
